# SU-repo

./: Lektion1-Lystfisker.sql  Lektion1_Lystfisker.out  Lektion2-company.sql  Lektion2_company.out  Lektion3-FugleObservationer.sql  Lektion3-Sejlads.sql  Lektion3_FugleObservationer.out  Lektion3_Sejlads.out  Lektion4-Facebook.sql  README.md
Lektion5/: CMakeLists(1).txt
Lektion6/SU-Lektion6/: CMakeLists.txt  main.cpp  main_robot.cpp  task.cpp  task.h
Lektion6/build-SU-Lektion6-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  MainRobot  MainTest  build.ninja  cmake_install.cmake
Lektion9/: Domænemodel - violet.class.violet.html  Ejendomsmægler.class.violet.html  Pile template.pptx
PA/: PA1.sql
PA2/PA2/: TODO_opdateret.txt  main.cpp  robot.cpp
PA2/build-PA2-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
PA2/build-PA2-Desktop-Debug/.cmake/api/v1/reply.prev/: index-2024-03-20T08-54-07-0823.json  (+1 more)
Portfølje/build-src-Desktop-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
SU-repo/: CMakeLists.txt
SU-repo/Lektion5/: CMakeLists.txt  main.cpp
SU-repo/Lektion6/SU-Lektion6/: CMakeLists.txt
SU-repo/Lektion6/build-SU-Lektion6-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt
SU-repo/PA2/PA2/: CMakeLists.txt  client.cpp  client.h  robot.h
SU-repo/PA2/build-PA2-Desktop-Debug/: PA2
SU_Project/: Entity_Relationship.drawio  readMe.txt
SU_Project/1. Iteration/: Entity_Relationship.drawio
SU_Project/src/: CMakeLists.txt  character.h  dungeon.h  enemy.h  game.h  hero.h  magic.h  main.cpp
(+23 files in other folders)
